--- a/src/README
+++ b/src/README
@@ -1,5 +1,5 @@
 
 To add another directory, you need to 
 
-1) Specify the path of the Makefile in configure.in
+1) Specify the path of the Makefile in configure.ac
 2) Include the subdir in the SUBDIRS variable of the src/Makefile
